# BE 8. create first resolvers

--- a/md/# 4. create resolvers.md
+++ b/md/# 4. create resolvers.md
@@ -5,3 +5,7 @@
 ### install package merge-graphql-schemas gql-merge
 
 ### set env for graphql merge (package.json, index.ts)
+
+### create GetMessages Resolvers
+
+### set innerChannelId
