# FE 2. set Global styles & state

--- a/md/# 6. init your fe project.md
+++ b/md/# 6. init your fe project.md
@@ -1,3 +1,11 @@
 # 6. init your fe project
 
 ### init FE project using CRA
+
+### install package for FE
+
+    apollo-cache-inmemory apollo-client apollo-link apollo-link-http apollo-link-ws faker graphql graphql-tag react-apollo react-apollo-hooks styled-components styled-reset subscriptions-transport-ws
+
+### create & connect apolloClient
+
+### set globalStyles & globalStore
